fix: add getToolIdToSectNameMap in DefaultRuleValidator